<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="aboutMenu">About</string>
    <string name="settings">Settings</string>
    <string name="fats">Fats (grams)</string>
    <string name="carbs">Carbs (grams)</string>
    <string name="protein">Protein (grams)</string>
    <string name="calories">Calories</string>
    <string name="calcmacrointake">Calc Macronutrient Intake</string>
    <string name="calcheartratemax">Calc Maximum Heart Rate</string>
    <string name="calcvo2">Calc VO2 MAX</string>
    <string name="entrybodyweight">Enter Body Weight (lbs):</string>
    <string name="creatinecalc">Calc Creatine Consumption</string>
    <string name="cunninghamrmr">Cunningham RMR (LBM)</string>
    <string name="mifflinrmr">Mifflin RMR (Height,Age,Weight)</string>
    <string name="percentfat">Enter Percent Body Fat:</string>
    <string name="lbmstring">Lean Body Mass (LBM):</string>
    <string name="calclbm">Calculate LBM</string>
    <string name="entryage">Enter Age (yrs):</string>
    <string name="entryheight">Enter Height (inches):</string>
    <string name="entryweight">Enter Weight (lbs):</string>
    <string name="kcalunit">kcal/day</string>
    <string name="calcrmr">Calculate RMR</string>
    <string name="rmr">Resting Metabolic Rate (RMR):</string>
    <string name="entrylbm">Enter Lean Body Mass (LBM):</string>
    <string name="calcrepspossible">Calculate Number of Reps Possible</string>
    <string name="repspossible">Number of Reps Possible:</string>
    <string name="targetweight">Enter Target Weight:</string>
    <string name="enteronerepmax">Enter One Rep Max:</string>
    <string name="calcrepmax">Calculate One Rep Max</string>
    <string name="inaccuracies">Note: Inaccurate if reps > 10</string>
    <string name="repcount">Enter Number of Reps:</string>
    <string name="weightlifted">Enter Weight Lifted:</string>
    <string name="leanbodymass">Lean Body Mass (LBM)</string>
    <string name="vo2max">VO2 Maximum</string>
    <string name="maxheartrate">Maximum Heart Rate</string>
    <string name="fatproteincarb">Fats/Proteins/Carbs</string>
    <string name="waterintake">Water Intake</string>
    <string name="macronutrient">Macronutrient Intake</string>
    <string name="creatineconsume">Recommended Creatine Consumption</string>
    <string name="possiblereps">Reps possible at Target</string>
    <string name="RMR">Resting Metabolic Rate (RMR)</string>
    <string name="onerepmax">One-rep Max</string>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Fitness Calculator</string>
    <string name="AthleteVO2">General Population, Female (20-29), 35-43\nGeneral Population, Male (20-29), 44-51\nCollege Athlete, Male (20-29), 57.4\nHighest Recorded Male (Cross Country Skier), 94</string>
    <string name="about">Fitness Calculator\nCreated by Machine Elves Media\nCopyright (c) 2011 Machine Elves Media\nAll Rights Reserved</string>
</resources>
