<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:myapp="http://schemas.android.com/apk/res/rbermani.android.fitnesscalc" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical" android:id="@+id/layoutBackground">
<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weightlifted" android:layout_gravity="center_horizontal"></TextView>


<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:minEms="5" android:id="@+id/txtWeightLifted" style="@style/EditText" android:layout_gravity="center_horizontal"></EditText>
<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/repcount" android:layout_gravity="center_horizontal"></TextView>
<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:minEms="5" android:id="@+id/txtNumberReps" style="@style/EditText"></EditText>
<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inaccuracies" android:layout_gravity="center_horizontal"></TextView>
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/calcrepmax" android:id="@+id/btnCalcRepMax"></Button><TextView android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/onerepmax" android:layout_gravity="center_horizontal"></TextView>
<EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:minEms="5" android:id="@+id/txtOneRepMax" android:maxLength="5" style="@style/EditText"></EditText>
	<LinearLayout android:id="@+id/LinearLayout03" android:layout_height="fill_parent" android:layout_width="fill_parent"><com.admob.android.ads.AdView android:id="@+id/ad" android:layout_height="wrap_content" myapp:backgroundColor="#000000" myapp:primaryTextColor="#FFFFFF" myapp:secondaryTextColor="#CCCCCC" android:layout_width="wrap_content" android:layout_gravity="bottom"/></LinearLayout>  
      
</LinearLayout>
